--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
 		<div v-if="(gameEnded && !player.keepGoing)" class="fullWidth">
 			<br>
 			<h2>{{modInfo.name}} {{VERSION.withoutName}}</h2><br><br>
-			<h3 v-html="modInfo.winText"></h3><br>
-			<h3>Please check the Discord to see if there are new content updates!</h3><br><br>
+			<h3 v-html="modInfo.winText"></h3><br><br>
 			<div v-if="!player.timePlayedReset">It took you {{formatTime(player.timePlayed)}} to beat the game.</div>
             <div v-if="!player.timePlayedReset && player.timePlayed < 2040">(Nice! That's pretty fast!)</div>
 			<br>
